kubernetes/apps/network/external-services/routes/adguard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  hostnames:
    - adguard.negative7.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: adguard
      matches:
        - path:
            type: PathPrefix
            value: /
