kubernetes/apps/network/external-services/routes/doco.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
annotations:
  gatus.home-operations.com/endpoint: |-
    path: /v1/health
metadata:
  name: doco-cd-proxy
spec:
  hostnames:
    - doco.negative7.com
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: doco-cd-proxy
      matches:
        - path:
            type: PathPrefix
            value: /
