kubernetes/apps/network/external-services/routes/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: *app
---
apiVersion: v1
kind: Service
metadata:
  name: &appui minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *appui
    app.kubernetes.io/instance: *appui
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app.kubernetes.io/name: *appui

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - minio.negative7.com
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: network
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - minio-ui.negative7.com
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: network
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app minio-proxy
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    port: 9000
    protocol: TCP
endpoints:
  - addresses:
      - 10.2.0.10
    conditions:
      ready: true

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &appui minio-proxy-ui
  namespace: network
  labels:
    app.kubernetes.io/name: *appui
    kubernetes.io/service-name: *appui
addressType: IPv4
ports:
  - name: http
    port: 9001
    protocol: TCP
endpoints:
  - addresses:
      - 10.2.0.10
    conditions:
      ready: true
