kubernetes/apps/network/external-services/routes/voron0.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: voron0
spec:
  hostnames:
    - voron0.negative7.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: voron0
      matches:
        - path:
            type: PathPrefix
            value: /
