kubernetes/apps/network/external-services/routes/voron2.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: voron2
spec:
  hostnames:
    - voron2.negative7.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: voron2
      matches:
        - path:
            type: PathPrefix
            value: /
